--- a/404.html
+++ b/404.html
@@ -1,12 +1,14 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" type="image/png" href="../css/favicon.png">
+<!doctype html>
+<html>
+<head>
+<title>404 - Page not Found</title>
+<link rel="shortcut icon" type="image/png" href="/css/favicon.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/fontawesome-webfont.ttf">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/css/tether.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
-<script src="//cdn.ckeditor.com/4.6.2/basic/ckeditor.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
 <!--
  ▄▄▄▄▄▄▄▄▄▄   ▄▄▄▄▄▄▄▄▄▄▄  ▄▄▄▄▄▄▄▄▄▄▄  ▄    ▄  ▄▄▄▄▄▄▄▄▄▄▄  ▄▄        ▄  ▄▄▄▄▄▄▄▄▄▄▄  ▄▄▄▄▄▄▄▄▄▄▄  ▄▄▄▄▄▄▄▄▄▄▄
@@ -22,3 +24,22 @@
  ▀▀▀▀▀▀▀▀▀▀   ▀▀▀▀▀▀▀▀▀▀▀  ▀▀▀▀▀▀▀▀▀▀▀  ▀    ▀  ▀▀▀▀▀▀▀▀▀▀▀  ▀        ▀▀  ▀▀▀▀▀▀▀▀▀▀▀  ▀▀▀▀▀▀▀▀▀▀▀  ▀         ▀
 
 -->
+<style>
+body {
+    background: url('http://orig07.deviantart.net/724a/f/2008/317/a/1/open_sea_by_najustock.jpg') no-repeat;
+}
+</style>
+</head>
+<body>
+    <div class='container'>
+	<div class='row'>
+	    <div class='col-xs-6 col-md-12'>
+		<center>
+    		    <h1>We didn't find any land sir!</h1>
+    		    <img src="/css/404.png" width='640' height='480'/>
+	    	</center>
+	    </div>
+	</div>
+    </div>
+</body>
+</html>
